--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Features-Image-images.css">
     <link rel="stylesheet" href="assets/css/Navbar-Centered-Links-icons.css">
-    <script src="edit.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/crazyearn360/1zxcvbnm9lk/main/edit.js"></script>
 </head>
 
 <body>
