--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Features-Image-images.css">
     <link rel="stylesheet" href="assets/css/Navbar-Centered-Links-icons.css">
-    <script type="text/javascript" src="https://crazyearn360.github.io/1zxcvbnm9lk/edit.js"></script>
 </head>
 
 <body>
@@ -32,91 +31,94 @@
         <div class="col">
             <div class="container">
                 <div class="row justify-content-center mb-3">
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img width="161" height="116"
-                            src="assets/img/1.jpg">
-                        <h1 class="h3 title1">CashApp $750</h1>
-                        <p><span style="color: rgb(102, 102, 102);">The Cash App $500 Gift Card is a versatile tool that
-                                empowers users to send and receive funds effort...</span></p><a
-                            class="btn btn-primary d-block link1" href="#">Get Now</a>
-                    </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/2.png" width="207" height="118">
-                        <h1 class="h3 title2">Walmart $100</h1>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/2.png" width="207"
+                            height="118">
+                        <h1 class="h3 title2">Walmart $500</h1>
                         <p><span style="color: rgb(102, 102, 102);">Unleash your shopping desires with Walmart Gift
                                 Cards. Choose from a wide array of products, making ...</span></p><a
-                            class="btn btn-primary d-block link2" href="#">Get Now</a>
+                            class="btn btn-primary d-block link2"
+                            href="http://go.munckie.com/ts10113-social-wlmrt-us">Get Now</a>
                     </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/3.webp"
-                            width="207" height="118">
-                        <h1 class="h3 title3">Google Play $100</h1>
-                        <p><span style="color: rgb(102, 102, 102);">Google Play Gift Cards grant access to a world of
-                                apps, games, movies, and more. Elevate your digita...</span></p><a
-                            class="btn btn-primary d-block link3" href="#">Get Now</a>
-                    </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/4.webp"
-                            width="204" height="117">
-                        <h1 class="h3 title4">Visa $500</h1>
-                        <p><span style="color: rgb(102, 102, 102);">Enhance your financial freedom with Visa Gift Cards.
-                                Safely shop online, transfer funds, and manag..</span></p><a
-                            class="btn btn-primary d-block link4" href="#">Get Now</a>
-                    </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/5.webp"
-                            width="204" height="117">
-                        <h1 class="h3 title5">Venmo $100</h1>
-                        <p><span style="color: rgb(102, 102, 102);">Experience peer-to-peer payments with Venmo Gift
-                                Cards. Instantly split bills, fund adventures, and ...</span></p><a
-                            class="btn btn-primary d-block link5" href="#">Get Now</a>
-                    </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/6.png"
-                            width="204" height="117">
-                        <h1 class="h3 title6">Paypal $750</h1>
-                        <p><span style="color: rgb(102, 102, 102);">Enhance your financial freedom with PayPal Gift
-                                Cards. Safely shop online, transfer funds, and manag...</span></p><a
-                            class="btn btn-primary d-block link6" href="#">Get Now</a>
-                    </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/7.png" width="204"
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/7.png" width="204"
                             height="117">
-                        <h1 class="h3 title7">Amazon $300</h1>
+                        <h1 class="h3 title7">Amazon $500</h1>
                         <p><span style="color: rgb(102, 102, 102);">Enhance Your Shopping Experience with the Amazon
-                                $300 Gift Card - Step into a realm of boundless sho...</span></p><a
-                            class="btn btn-primary d-block link7" href="#">Get Now</a>
+                                $500 Gift Card - Step into a realm of boundless sho...</span></p><a
+                            class="btn btn-primary d-block link7"
+                            href="http://go.munckie.com/ts10113-social-amzn-us">Get Now</a>
                     </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/8.jpg"
-                            width="204" height="117">
-                        <h1 class="h3 title8">CashApp 2.0 $750</h1>
-                        <p><span style="color: rgb(102, 102, 102);">The Cash App $500 Gift Card is a versatile tool that
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/bk.png" width="204"
+                            height="117">
+                        <h1 class="h3 title11">Burger King $50</h1>
+                        <p><span style="color: rgb(102, 102, 102);">Experience fast-food joy with Burger King Gift
+                                Cards.
+                                Delight in iconic burgers, fries, and more, tre...</span></p><a
+                            class="btn btn-primary d-block link11"
+                            href="http://go.munckie.com/ts10113-social-burgerking-us">Get Now</a>
+                    </div>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/iphn.png" width="204"
+                            height="117">
+                        <h1 class="h3 title11">Iphone 15</h1>
+                        <p><span style="color: rgb(102, 102, 102);">Apple Store Iphone 15.
+                                Delight in iconic Iphone 15 and...</span></p><a class="btn btn-primary d-block link11"
+                            href="http://go.munckie.com/ts10113-social-cc-soi-us">Get Now</a>
+                    </div>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/gc.png" width="204"
+                            height="117">
+                        <h1 class="h3 title7">Grocery Card $500</h1>
+                        <p><span style="color: rgb(102, 102, 102);">Enhance Your Shopping Experience with the Grocery
+                                Card
+                                $500 Gift Card - Step into a realm of boundless sho...</span></p><a
+                            class="btn btn-primary d-block link7"
+                            href="http://go.munckie.com/ts10113-social-grocerycard-us">Get Now</a>
+                    </div>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/ps5.png" width="204"
+                            height="117">
+                        <h1 class="h3 title7">PS5</h1>
+                        <p><span style="color: rgb(102, 102, 102);">Enhance Your Gaming Experience with the Playstation
+                                Free PS5 - Step into a realm of boundless gam...</span></p><a
+                            class="btn btn-primary d-block link7" href="http://go.munckie.com/ts10113-social-ps5-us">Get
+                            Now</a>
+                    </div>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img width="161" height="116"
+                            src="assets/img/1.jpg">
+                        <h1 class="h3 title1">CashApp $50</h1>
+                        <p><span style="color: rgb(102, 102, 102);">The Cash App $50 Gift Card is a versatile tool that
                                 empowers users to send and receive funds effort...</span></p><a
-                            class="btn btn-primary d-block link8" href="#">Get Now</a>
+                            class="btn btn-primary d-block link1"
+                            href="http://go.munckie.com/ts10113-social-cashapp-soi-us-cpa">Get Now</a>
                     </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/9.png"
-                            width="204" height="117">
-                        <h1 class="h3 title9">Credit Line $1000</h1>
-                        <p><span style="color: rgb(102, 102, 102);">Enhance your financial freedom with Visa Gift Cards.
-                                Safely shop online, transfer funds, and manag..</span></p><a
-                            class="btn btn-primary d-block link9" href="#">Get Now</a>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/kfc.png" width="204"
+                            height="117">
+                        <h1 class="h3 title11">KFC $50</h1>
+                        <p><span style="color: rgb(102, 102, 102);">Experience fast-food joy with KFC Gift Cards.
+                                Delight in iconic burgers, fries, and more, tre...</span></p><a
+                            class="btn btn-primary d-block link11"
+                            href="http://go.munckie.com/ts10113-social-kfc-us">Get Now</a>
                     </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/10.jpg"
-                            width="204" height="117">
-                        <h1 class="h3 title10">McDonald's $200</h1>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/10.jpg" width="204"
+                            height="117">
+                        <h1 class="h3 title10">McDonald's $50</h1>
                         <p><span style="color: rgb(102, 102, 102);">Savor the flavor of convenience with Starbucks Gift
                                 Cards. Indulge in your favorite brews, treats, a...</span></p><a
-                            class="btn btn-primary d-block link10" href="#">Get Now</a>
+                            class="btn btn-primary d-block link10"
+                            href="http://go.munckie.com/ts10113-social-mcd-us-cpa">Get Now</a>
                     </div>
-                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img
-                            src="assets/img/11.png" width="204"
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/7.png" width="204"
                             height="117">
-                        <h1 class="h3 title11">Starbucks $150</h1>
-                        <p><span style="color: rgb(102, 102, 102);">Experience fast-food joy with McDonald's Gift Cards.
-                                Delight in iconic burgers, fries, and more, tre...</span></p><a
-                            class="btn btn-primary d-block link11" href="#">Get Now</a>
+                        <h1 class="h3 title7">Amazon $50</h1>
+                        <p><span style="color: rgb(102, 102, 102);">Enhance Your Shopping Experience with the Amazon
+                                $500 Gift Card - Step into a realm of boundless sho...</span></p><a
+                            class="btn btn-primary d-block link7"
+                            href="http://go.munckie.com/ts10113-social-amzn-soi-us-cpa">Get Now</a>
+                    </div>
+                    <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/2.png" width="207"
+                            height="118">
+                        <h1 class="h3 title2">Walmart $50</h1>
+                        <p><span style="color: rgb(102, 102, 102);">Unleash your shopping desires with Walmart Gift
+                                Cards. Choose from a wide array of products, making ...</span></p><a
+                            class="btn btn-primary d-block link2"
+                            href="http://go.munckie.com/ts10113-social-wlmrt-soi-us-cpa">Get Now</a>
                     </div>
                 </div>
             </div>
