--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>BDOFFERS</title>
+    <title>Offer for USA</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Features-Image-images.css">
@@ -30,7 +30,7 @@
     <div class="row">
         <div class="col">
             <div class="container">
-                <div class="row justify-content-center mb-3">
+                <div class="row justify-content-center mb-3 text-center">
                     <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/2.png" width="207"
                             height="118">
                         <h1 class="h3 title2">Walmart $500</h1>
