--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-md bg-body py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
                     class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i
-                        class="far fa-star"></i></span><span>BDOFFERS</span></a><button data-bs-toggle="collapse"
+                        class="far fa-star"></i></span><span>USA Offers</span></a><button data-bs-toggle="collapse"
                 class="navbar-toggler" data-bs-target="#navcol-3"><span class="visually-hidden">Toggle
                     navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-3">
@@ -171,7 +171,6 @@
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="links.js"></script>
 </body>
 
 </html>
