--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-3">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-                </ul><button class="btn btn-primary" type="button">Call Me</button>
+                    <li class="nav-item"><a class="nav-link active" href="http://go.munckie.com/ts10113-social-wlmrt-us">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="http://go.munckie.com/ts10113-social-wlmrt-us">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="http://go.munckie.com/ts10113-social-wlmrt-us">Contact Us</a></li>
+                </ul><a class="btn btn-primary" href="http://go.munckie.com/ts10113-social-wlmrt-us" role="button">Call Me</a>
             </div>
         </div>
     </nav>
