--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/bk.png" width="204"
                             height="117">
-                        <h1 class="h3 title11">Burger King $50</h1>
+                        <h1 class="h3 title11">Burger King $500</h1>
                         <p><span style="color: rgb(102, 102, 102);">Experience fast-food joy with Burger King Gift
                                 Cards.
                                 Delight in iconic burgers, fries, and more, tre...</span></p><a
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-md-3 rounded-4 m-2 p-2 shadow-lg"><img src="assets/img/iphn.png" width="204"
                             height="117">
-                        <h1 class="h3 title11">Iphone 15</h1>
+                        <h1 class="h3 title11">iPhone 15</h1>
                         <p><span style="color: rgb(102, 102, 102);">Apple Store Iphone 15.
                                 Delight in iconic Iphone 15 and...</span></p><a class="btn btn-primary d-block link11"
                             href="http://go.munckie.com/ts10113-social-cc-soi-us">Get Now</a>
